--- a/analysis/eeg-analysis/statistics/blast_adult_erp_analysis.Rmd
+++ b/analysis/eeg-analysis/statistics/blast_adult_erp_analysis.Rmd
@@ -73,6 +73,34 @@ pairwise.t.test(df_factor$Late, df_factor$Global, p.adj = 'bonferroni')
 pairwise.t.test(df_factor$Late, df_factor$Local, p.adj = 'bonferroni')
 ```
 
+## ttests
+```{r}
+df_ttest = cast(df_factor,subject~Domain+Global+Local,value="Early")
+
+df_ttest$Short = (df_ttest$Syllable_High_Short+df_ttest$Syllable_Low_Short+df_ttest$Voice_High_Short+df_ttest$Voice_Low_Short)/4
+df_ttest$Long = (df_ttest$Syllable_High_Long+df_ttest$Syllable_Low_Long+df_ttest$Voice_High_Long+df_ttest$Voice_Low_Long)/4
+
+df_ttest$High = (df_ttest$Syllable_High_Short+df_ttest$Syllable_High_Long+df_ttest$Voice_High_Short+df_ttest$Voice_High_Long)/4
+df_ttest$Low = (df_ttest$Syllable_Low_Short+df_ttest$Syllable_Low_Long+df_ttest$Voice_Low_Short+df_ttest$Voice_Low_Long)/4
+
+df_ttest$Syll_High = (df_ttest$Syllable_High_Short+df_ttest$Syllable_High_Long)/2
+df_ttest$Syll_Low = (df_ttest$Syllable_Low_Short+df_ttest$Syllable_Low_Long)/2
+df_ttest$Voice_High = (df_ttest$Voice_High_Short+df_ttest$Voice_High_Long)/2
+df_ttest$Voice_Low = (df_ttest$Voice_Low_Short+df_ttest$Voice_Low_Long)/2
+
+df_ttest$Syll_Short = (df_ttest$Syllable_High_Short+df_ttest$Syllable_Low_Short)/2
+df_ttest$Syll_Long = (df_ttest$Syllable_High_Long+df_ttest$Syllable_Low_Long)/2
+df_ttest$Voice_Short = (df_ttest$Voice_High_Short+df_ttest$Voice_Low_Short)/2
+df_ttest$Voice_Long = (df_ttest$Voice_High_Long+df_ttest$Voice_Low_Long)/2
+
+t.test(df_ttest$Short,df_ttest$Long,paired=TRUE)
+t.test(df_ttest$High, df_ttest$Low,paired=TRUE)
+t.test(df_ttest$Syll_Short, df_ttest$Syll_Long,paired=TRUE)
+t.test(df_ttest$Syll_High, df_ttest$Syll_Low,paired=TRUE)
+t.test(df_ttest$Voice_Short, df_ttest$Voice_Long,paired=TRUE)
+t.test(df_ttest$Voice_High, df_ttest$Voice_Low,paired=TRUE)
+```
+
 ## Correlation Analysis
 
 This section is used to analyze the correlation between SSL and BLAST ERP amplitudes.
@@ -132,6 +160,11 @@ df_corr$Syll_Local = (Syll_Short-Syll_Long)
 df_corr$Syll_Global = (Syll_High-Syll_Low)
 df_corr$Voice_Local = (Voice_Short-Voice_Long)
 df_corr$Voice_Global = (Voice_High-Voice_Low)
+
+df_corr$Global_long = ((df_early$Syllable_High_Long+df_early$Voice_High_Long)/2) - ((df_early$Syllable_Low_Long+df_early$Voice_Low_Long)/2)
+df_corr$Global_short = ((df_early$Syllable_High_Short+df_early$Voice_High_Short)/2) - ((df_early$Syllable_Low_Short+df_early$Voice_Low_Short)/2)
+df_corr$Local_high = ((df_early$Syllable_High_Short+df_early$Voice_High_Short)/2) - ((df_early$Syllable_High_Long+df_early$Voice_High_Long)/2)
+df_corr$Local_low = ((df_early$Syllable_Low_Short+df_early$Voice_Low_Short)/2) - ((df_early$Syllable_Low_Long+df_early$Voice_Low_Long)/2)
 ```
 
 ```{r, eval=TRUE}
@@ -154,6 +187,10 @@ df_corr$Syll_Local = as.numeric(df_corr$Syll_Local)
 df_corr$Syll_Global = as.numeric(df_corr$Syll_Global)
 df_corr$Voice_Local = as.numeric(df_corr$Voice_Local)
 df_corr$Voice_Global = as.numeric(df_corr$Voice_Global)
+df_corr$Global_long = as.numeric(df_corr$Global_long)
+df_corr$Global_short = as.numeric(df_corr$Global_short)
+df_corr$Local_high = as.numeric(df_corr$Local_high)
+df_corr$Local_low = as.numeric(df_corr$Local_low)
 ```
 
 ## Early Correlation 
@@ -198,6 +235,11 @@ df_corr$Syll_Local = (Syll_Short-Syll_Long)
 df_corr$Syll_Global = (Syll_High-Syll_Low)
 df_corr$Voice_Local = (Voice_Short-Voice_Long)
 df_corr$Voice_Global = (Voice_High-Voice_Low)
+
+df_corr$Global_long = ((df_late$Syllable_High_Long+df_late$Voice_High_Long)/2) - ((df_late$Syllable_Low_Long+df_late$Voice_Low_Long)/2)
+df_corr$Global_short = ((df_late$Syllable_High_Short+df_late$Voice_High_Short)/2) - ((df_late$Syllable_Low_Short+df_late$Voice_Low_Short)/2)
+df_corr$Local_high = ((df_late$Syllable_High_Short+df_late$Voice_High_Short)/2) - ((df_late$Syllable_High_Long+df_late$Voice_High_Long)/2)
+df_corr$Local_low = ((df_late$Syllable_Low_Short+df_late$Voice_Low_Short)/2) - ((df_late$Syllable_Low_Long+df_late$Voice_Low_Long)/2)
 ```
 
 ```{r, eval=TRUE}
@@ -220,6 +262,10 @@ df_corr$Syll_Local = as.numeric(df_corr$Syll_Local)
 df_corr$Syll_Global = as.numeric(df_corr$Syll_Global)
 df_corr$Voice_Local = as.numeric(df_corr$Voice_Local)
 df_corr$Voice_Global = as.numeric(df_corr$Voice_Global)
+df_corr$Global_long = as.numeric(df_corr$Global_long)
+df_corr$Global_short = as.numeric(df_corr$Global_short)
+df_corr$Local_high = as.numeric(df_corr$Local_high)
+df_corr$Local_low = as.numeric(df_corr$Local_low)
 ```
 
 ## Late Correlation 
@@ -247,6 +293,36 @@ p <- ggplot(df_early_melt, aes(x=Local, y=value)) +
   stat_summary(fun.data=mean_sdl, 
                  geom="pointrange", color="red")
 p
+```
+
+```{r}
+d <- df_early_melt
+
+d %>% 
+  group_by(Local) %>%
+  summarise(Early_mean = mean(value))
+sum_d <- d %>% 
+          group_by(Local) %>%
+          summarise(Early_mean = mean(value),
+                    se   = sd(value)/sqrt(n()))
+sum_d
+
+pd <- position_dodge(width = 0)
+sum_d %>%
+  ggplot(aes(x = Local, y = Early_mean)) +
+    geom_errorbar(aes(ymin = Early_mean - se, ymax = Early_mean + se),
+                  width = .1, position = pd) +
+    geom_point(size = 4, position = pd) +
+    geom_point(size = 3, color = "white", position = pd) + 
+    labs(x = "Local",
+         y = "Average ERP Amplitude") +
+  theme(
+    text=element_text(size=20),
+    panel.background = element_rect(fill = "white"),         # Set plot background to white
+    legend.key  = element_rect(fill = "white"),              # Set legend item backgrounds to white
+    axis.line.x = element_line(colour = "black", size = 1),  # Add line to x axis
+    axis.line.y = element_line(colour = "black", size = 1)   # Add line to y axis
+  )
 ```
 
 ### plot the line graphs to illustrate interaction between Local and Global Interaction in Late Time Window
@@ -314,6 +390,9 @@ ggplot(df_corr_early, aes(x=Syll_Global, y=accuracy)) + geom_point(size=3, color
 ```{r}
 ggplot(df_corr_early, aes(x=Syll_Global, y=mean_rt)) + geom_point(size=3, color="navy blue", shape=19) + labs(title="Distributional SL Mean RT & Global (p) MMN for Syllables", x="Syllable Only Global (p) MMN", y = "Mean Reaction Time") + theme(plot.title = element_text(hjust = 0.5)) + geom_smooth(method=lm)
 ```
+```{r}
+ggplot(df_corr_early, aes(x=Local_low, y=scaled_rt_slope)) + geom_point(size=3, color="navy blue", shape=19) + labs(title="Distributional SL RT & Local (p) within Low Condition", x="Low Only Local (p) MMN", y = "RT SLope") + theme(plot.title = element_text(hjust = 0.5)) + geom_smooth(method=lm)
+```
 
 ### Plotting the late correlations
 ```{r}
@@ -325,5 +404,8 @@ ggplot(df_corr_late, aes(x=Short_Long_MMN, y=scaled_rt_slope)) + geom_point(size
 ```
 ```{r}
 ggplot(df_corr_late, aes(x=Voice_Global, y=entropy)) + geom_point(size=3, color="navy blue", shape=19) + labs(title="Distributional SL Entropy & Global (p) MMN for Voice", x="Voice Only Global (p) MMN", y = "Entropy") + theme(plot.title = element_text(hjust = 0.5)) + geom_smooth(method=lm)
+```
+```{r}
+ggplot(df_corr_late, aes(x=Local_low, y=scaled_rt_slope)) + geom_point(size=3, color="navy blue", shape=19) + labs(title="Distributional SL RT & Local (p) within Low Condition", x="Low Only Local (p) MMN", y = "RT SLope") + theme(plot.title = element_text(hjust = 0.5)) + geom_smooth(method=lm)
 ```
 
